--- a/week3/ngrams/05_final_report.Rmd
+++ b/week3/ngrams/05_final_report.Rmd
@@ -52,14 +52,18 @@ Then edit the `03_download_totals.sh` file to down the `googlebooks-eng-all-tota
 Load in the `year_counts.tsv` and `total_counts.csv` files. Use the `here()` function around the filename to keep things portable.Give the columns of `year_counts.tsv` the names `term`, `year`, `volume`, and `book_count`. Give the columns of `total_counts.csv` the names `year`, `total_volume`, `page_count`, and `book_count`. Note that column order in these files may not match the examples in the documentation.
 
 ```{r load-counts}
-
-
+setwd("week3/ngrams")
+year_counts <- read_tsv('year_counts.tsv',
+                    col_names = c('term','year','volume','book_count'))
+total_counts <- read_csv('total_counts.csv',
+                    col_names = c('year','total_volume','page_count','book_count'))
 ```
 
 ## Your written answer
 
 Add a line below using Rmarkdown's inline syntax to print the total number of lines in each dataframe you've created.
-
+year_counts has 76,336 lines
+total_counts has 425 lines
 # Part B
 
 > Recreate the main part of figure 3a of Michel et al. (2011). To recreate this figure, you will need two files: the one you downloaded in part (a) and the “total counts” file, which you can use to convert the raw counts into proportions. Note that the total counts file has a structure that may make it a bit hard to read in. Does version 2 of the NGram data produce similar results to those presented in Michel et al. (2011), which are based on version 1 data?
@@ -69,8 +73,8 @@ Add a line below using Rmarkdown's inline syntax to print the total number of li
 Join the raw year term counts with the total counts and divide to get a proportion of mentions for each term normalized by the total counts for each year.
 
 ```{r join-years-and-totals}
-
-
+combined_data <- left_join(year_counts, total_counts, by = "year")
+combined_data <- mutate(combined_data, proportion = volume/total_volume)
 ```
 
 ## Plot the main figure 3a
@@ -78,12 +82,14 @@ Join the raw year term counts with the total counts and divide to get a proporti
 Plot the proportion of mentions for the terms "1883", "1910", and "1950" over time from 1850 to 2012, as in the main figure 3a of the original paper. Use the `percent` function from the `scales` package for a readable y axis. Each term should have a different color, it's nice if these match the original paper but not strictly necessary.
 
 ```{r plot-proportion-over-time}
-
+year_data <- filter(combined_data, term == "1883" | term == "1910" | term == "1950") |> filter(year >= 1850 & year <= 2012)
+ggplot(year_data, aes(x=year, y = (proportion*10000), color = term)) + geom_line()  + scale_color_manual(values = c("1883" = "blue", "1910" = "green", "1950" = "red")) + labs(x = "Year", y="Frequency")
 ```
 
 ## Your written answer
 
 Write up your answer to Part B here.
+Yes, they produce similar results, except that the year 1910 peaks slightly lower, and the year 1950 peaks slightly higher. Also they are all a lot more steep/drop down faster, especially 1883. 
 
 # Part C
 
@@ -96,6 +102,8 @@ Go to the ngram viewer, enter the terms "1883", "1910", and "1950" and take a sc
 ## Your written answer
 
 Add your screenshot for Part C below this line using the `![](figure_filename.png)` syntax and comment on similarities / differences.
+![](ngramscreenshot.png)
+They seem similar, but are a lot less steep and fall down much faster. They also peak much lower, according to my reading of the ngrm's y-axis, whic is different from my own.
 
 
 # Part D
@@ -107,12 +115,17 @@ Add your screenshot for Part C below this line using the `![](figure_filename.pn
 Plot the raw counts for the terms "1883", "1910", and "1950" over time from 1850 to 2012. Use the `comma` function from the `scales` package for a readable y axis. The colors for each term should match your last plot, and it's nice if these match the original paper but not strictly necessary.
 
 ```{r plot-raw-mentions-over-time}
-
+ggplot(year_data, aes(x=year, y = volume*10000, color = term)) + geom_line() + scale_y_continuous(labels = comma) + scale_color_manual(values = c("1883" = "blue", "1910" = "green", "1950" = "red")) + labs(x = "Year", y="Volume")
 ```
 
 # Part E
 
 > Does the difference between (b) and (d) lead you to reevaluate any of the results of Michel et al. (2011). Why or why not?
+Yes! It's not that we necessarily "forgot" about these years, but rather, in the influx of new books, other books and terms crowded out 
+these in the overall proportion, but actually there's more literature written about 1883 now, than there was in 1883 (which makes sense
+intuitively, considering the information age)
+
+
 
 As part of answering this question, make an additional plot.
 
@@ -121,13 +134,15 @@ As part of answering this question, make an additional plot.
 Plot the total counts for each year over time, from 1850 to 2012. Use the `comma` function from the `scales` package for a readable y axis. There should be only one line on this plot (not three).
 
 ```{r plot-totals}
-
+subset_total_counts <- filter(total_counts, year >= 1850 & year <= 2012)
+ggplot(subset_total_counts, aes(x=year, y=total_volume)) + geom_line() + scale_y_continuous(labels = comma)
 ```
 
 ## Your written answer
 
 Write up your answer to Part E here.
-
+This strengthens my previous answer, because one sees that the amount of books (also, specifically the amount of books
+scanned in this project) have risen almost exponentially in recent years.
 # Part F
 
 > Now, using the proportion of mentions, replicate the inset of figure 3a. That is, for each year between 1875 and 1975, calculate the half-life of that year. The half-life is defined to be the number of years that pass before the proportion of mentions reaches half its peak value. Note that Michel et al. (2011) do something more complicated to estimate the half-life—see section III.6 of the Supporting Online Information—but they claim that both approaches produce similar results. Does version 2 of the NGram data produce similar results to those presented in Michel et al. (2011), which are based on version 1 data? (Hint: Don’t be surprised if it doesn’t.)
@@ -137,7 +152,14 @@ Write up your answer to Part E here.
 For each year term, find the year where its proportion of mentions peaks (hits its highest value). Store this in an intermediate dataframe.
 
 ```{r compute-peaks}
-
+library(stringr)
+year_peaks <- combined_data |> 
+filter(str_detect(term, '^187[5-9]$|^18[8-9][0-9]$|^19[0-6][0-9]$|^197[0-5]$')) |> 
+filter(year >= 1850 & year <= 2012) |>
+ group_by(term) |>
+ mutate(max_prop= max(proportion))
+year_peaks <- filter(year_peaks, proportion==max_prop) |> select(term, year_peak = year, proportion)
+#View(head(year_peaks, 200))
 ```
 
 ## Compute half-lifes
@@ -145,7 +167,16 @@ For each year term, find the year where its proportion of mentions peaks (hits i
 Now, for each year term, find the minimum number of years it takes for the proportion of mentions to decline from its peak value to half its peak value. Store this in an intermediate data frame.
 
 ```{r compute-half-lifes}
-
+year_peaks <- year_peaks |> 
+  rename(max_prop = proportion)
+half_life <- combined_data |>  
+  filter(term %in% year_peaks$term, year >= 1850 & year <= 2012) |>
+  left_join(year_peaks, by = "term") |> 
+  filter(year > year_peak) |> 
+  filter(proportion <= (max_prop / 2)) |> 
+  group_by(term) |> 
+  summarize(half_life = min(year - year_peak), .groups = "drop")
+View(head(half_life, 200))
 ```
 
 ## Plot the inset of figure 3a
@@ -154,21 +185,43 @@ Plot the half-life of each term over time from 1850 to 2012. Each point should r
 
 
 ```{r plot-half-lifes}
-
+half_life$term <- as.numeric(half_life$term)
+half_life$highlight <- ifelse(
+  half_life$term %in% c(1883, 1910, 1950),
+  as.character(half_life$term),  
+  "normal"
+)
+ggplot(half_life, aes(x=term, y=half_life, color = highlight)) + geom_point(size=3) + geom_smooth(
+    data = subset(half_life, highlight != "normal"),
+    aes(x = term, y = half_life),
+    color = "black"    
+  ) +
+  scale_color_manual(values = c(
+      "1883" = "red",
+      "1910" = "blue",
+      "1950" = "green",
+      "normal" = "black"
+    ), 
+    breaks = c("1883", "1910", "1950")
+  ) +
+  labs(x="Year", y="Half-life (yrs)")
 ```
 
 ## Your written answer
 
 Write up your answer to Part F here.
+I feel like I did something wrong, but it looks completely different, with the year 1910 have a much higher half-life
+and the year 1883 having the smallest
 
 # Part G
 
 > Were there any years that were outliers such as years that were forgotten particularly quickly or particularly slowly? Briefly speculate about possible reasons for that pattern and explain how you identified the outliers.
-
+If my data is correct, then years like 1877 and ~1940 have very short half-lifes (forgotten quickly) while the highest is 1900, which makes sense, but then I don't know why 1910 is so high also
 ## Your written answer
 
 Write up your answer to Part G here. Include code that shows the years with the smallest and largest half-lifes.
 
 # Makefile
-
+half_life |> filter(half_life == max(half_life))
+half_life |> filter(half_life == min(half_life))
 Edit the `Makefile` in this directory to execute the full set of scripts that download the data, clean it, and produce this report. This must be turned in with your assignment such that running `make` on the command line produces the final report as a pdf file.
